# functional_sampling_tool

./: .gitignore  LICENSE  MANIFEST.in  README.md  changelog.txt  config.py  fst  pyproject.toml  run_tests.sh  setup.cfg  setup.py
example/: README.md  clean_example.sh
example/after_e1/: config.py  mdrun.mdp  sbatch_launch.sh  start.gro  topol.top
example/after_e1/epoch01/: output.txt  sbatch_launch.sh
example/after_e1/epoch01/rep01/: mdout.mdp  mdrun.cpt  mdrun.edr  mdrun.gro  mdrun.tpr  mdrun.tpr.REMOVED.git-id  mdrun.xtc  mdrun.xtc.REMOVED.git-id  output_grompp.txt
example/after_e1/epoch01/rep02/: mdout.mdp  mdrun.cpt  mdrun.edr  mdrun.gro  mdrun.tpr  mdrun.tpr.REMOVED.git-id  mdrun.xtc  mdrun.xtc.REMOVED.git-id  output_grompp.txt
example/after_e1/epoch01/rep03/: mdout.mdp  mdrun.cpt  mdrun.edr  mdrun.gro  mdrun.tpr  mdrun.tpr.REMOVED.git-id  mdrun.xtc  mdrun.xtc.REMOVED.git-id  output_grompp.txt
example/after_e1/epoch01/rep04/: mdout.mdp  mdrun.cpt  mdrun.edr  mdrun.gro  mdrun.tpr  mdrun.tpr.REMOVED.git-id  mdrun.xtc  mdrun.xtc.REMOVED.git-id  output_grompp.txt
example/after_e1/epoch01/rep05/: mdout.mdp  mdrun.cpt  mdrun.edr  mdrun.gro  mdrun.tpr  mdrun.tpr.REMOVED.git-id  mdrun.xtc  mdrun.xtc.REMOVED.git-id  output_grompp.txt
example/after_e1/epoch01/rep06/: mdout.mdp  mdrun.cpt  mdrun.edr  mdrun.gro  mdrun.tpr  mdrun.tpr.REMOVED.git-id  mdrun.xtc  mdrun.xtc.REMOVED.git-id  output_grompp.txt
example/after_e1/epoch01/rep07/: mdout.mdp  mdrun.cpt  mdrun.edr  mdrun.gro  mdrun.tpr  mdrun.xtc  (+3 more)
example/after_e1/toppar/: HETA.itp
example/initialize/: config.py  sbatch_launch.sh  topol.top
example/initialize/toppar/: PROA.itp  forcefield.itp
making/: README.txt  calc_fval.py  copy_struct.py  rat_human_struct_alignments.fasta  rat_human_struct_alignments.txt
making/charmm-gui/: readme.txt
making/equilibr/: README.txt  mahti_launch.sh
making/equilibr/solv/: sol_remover.py
making/modeller/: 5weo_no_STZ.seq  README.txt  alignment.ali  fix_resids.py  human-5weo_no_STZ.fasta  model-default.py
prod/: autosampler_notebook.ipynb  config.py  epoch_starter_playground.ipynb  fst  index_grompp.ndx.REMOVED.git-id  mdrun.mdp  topol.top
prod/initial/: start.gro.REMOVED.git-id
prod/src/: choosing.py  clustering.py  cmd_line.py  config.py  epoch_starting.py  inout.py  utils.py
src/: __init__.py  analysis.py  choosing.py  clustering.py  cmd_line.py  default_config.py  epoch_starting.py  exceptions.py  inout.py  transformations.py  utils.py
src/analysis/: ancestry.py  extract.py  parsers.py
src/templates/: config_example.py.txt  sbatch_template.sh
tests/: inout.py  main.py  transformations.py
tests/data/: __init__.py  make_whole.npz
tests/data/epoch_examples/: config.py  index_grompp.ndx  mdrun.mdp  start.gro
(+111 files in other folders)
