
[metadata]
name         = functional_sampling_tool
version      = 0.0.1
author       = Santeri Paajanen
author_email = santeri.e.paajanen@helsinki.fi
description  = A tool for enhancing sampling in MD-simulations
long_description = file: README.md
classifiers  = 
    Programming Language :: Python :: 3
    Programming Language :: Cython
    Operating System :: OS Independent
dependencies = 
    importlib_resources
    numpy
    matplotlib
    mdanalysis
    scikit-learn

[options]
package_dir =
    functional_sampling_tool = src
include_package_data = True
python_requires = >=3.7

[options.entry_points]
console_scripts =
    fst = functional_sampling_tool:cmd_line._run_tool

[options.package_data]
functional_sampling_tool.templates =
    *.sh
    *.py.txt
    