
[metadata]
name         = functional_sampling_tool
version      = attr: functional_sampling_tool.__version__
author       = Santeri Paajanen, Shreyas Kaptan
author_email = santeri.e.paajanen@helsinki.fi
description  = A tool for enhancing sampling in MD-simulations
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/molecularmachinist/functional_sampling_tool
project_urls =
    Bug Tracker = https://github.com/molecularmachinist/functional_sampling_tool/issues
classifiers  = 
    Programming Language :: Python :: 3
    Programming Language :: Cython
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
dependencies = 
    importlib_resources
    numpy
    matplotlib
    mdanalysis
    scikit-learn

[options]
include_package_data = True
python_requires = >=3.7
install_requires =
    scikit-learn>=1.0
    matplotlib>=3.2
    numpy>=1.21
    scipy>=1.1.0
    MDAnalysis>=2.4
    importlib_resources>=4.0;python_version<'3.10'

[options.entry_points]
console_scripts =
    fst = functional_sampling_tool:cmd_line._run_tool
    
[options.package_data]
functional_sampling_tool.templates =
    *.sh
    *.py.txt